delete unused methods, add logs to gitignore

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,4 @@ spring:
     url: jdbc:postgresql://localhost:5432/marathon_db
     driver-class-name: org.postgresql.Driver
     clean-disabled: false
+    validate-on-migrate: false
