--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>ani</groupId>
     <artifactId>Beauty-Marathon</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2</version>
     <name>Beauty Marathon</name>
     <description>Beauty Marathon</description>
     <url/>
@@ -98,6 +98,7 @@
     </dependencies>
 
     <build>
+        <finalName>beauty-marathon</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
